--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.17.1",
     "express": "^5.1.0",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "prisma": "^6.17.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
