--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " ts-node ./src/server.ts"
+    "start": "npx ts-node server.ts",
+    "migrate": "npx prisma migrate dev"
   },
   "author": "",
   "license": "ISC",
