--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "envalid": "^8.1.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "prisma": "^6.17.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.7.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
